<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainProfileFragment"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/profile_pict"
        android:contentDescription="@string/photo_profile"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileName"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileBioLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:startIconDrawable="@drawable/ic_bio">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileBio"
            android:hint="@string/bio"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/profileSignout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signout"
        android:layout_gravity="center"
        android:layout_marginVertical="4dp"
        android:theme="@style/Widget.MaterialComponents.Button"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:spinning_bar_color="@color/white"
        app:spinning_bar_padding="12dp"/>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/profileEditSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:layout_marginVertical="4dp"
        android:theme="@style/Widget.MaterialComponents.Button"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:spinning_bar_color="@color/white"
        app:spinning_bar_padding="12dp"/>
</LinearLayout>