<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateProfileActivity"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">

    <ImageView
        android:id="@+id/createImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/profile_pict"
        android:contentDescription="@string/photo_profile"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:onClick="getImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createName"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createBioLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:startIconDrawable="@drawable/ic_bio">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createBio"
            android:hint="@string/bio"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/createSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_gravity="center"
        android:onClick="gotoMain"
        android:layout_marginVertical="4dp"
        android:theme="@style/Widget.MaterialComponents.Button"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:spinning_bar_color="@color/white"
        app:spinning_bar_padding="12dp"
        android:background="@drawable/circular_border_shape"/>

</LinearLayout>